--- a/examples/QuickJournal/QuickJournal/Views/JournalEntryDetailsPage.xaml
+++ b/examples/QuickJournal/QuickJournal/Views/JournalEntryDetailsPage.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
 		xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
 		x:Class="QuickJournal.JournalEntryDetailsPage"
@@ -9,11 +9,9 @@
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="35" />
-			<RowDefinition Height="35" />
 			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
 		<Entry Text="{Binding Entry.Title}" Placeholder="Title" Grid.Row="0" />
-		<Entry Text="{Binding Entry.Random}" Placeholder="Title" Grid.Row="1" />
-		<Editor Text="{Binding Entry.BodyText}" Grid.Row="2" />
+		<Editor Text="{Binding Entry.BodyText}" Grid.Row="1" />
 	</Grid>
 </ContentPage>
